--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <meta name="language" content="English">
+    <script src="https://use.typekit.com/rqk4hqp.js"></script>
 
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -21,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Space-X Demo App</title>
+    <title>SpaceX Launch Schedule / Manifest</title>
   </head>
   <body>
     <noscript>
